# farm_engine

./: Cargo.toml  README.md  build.rs  mi_tablacc.csv
.github/workflows/: publish.yml  release.yml
src/: Rev.rs  db.rs  engine.rs  error.rs  index.rs  lib.rs  main.rs  main1 copy.rs  main2.rs  matchqa.rs  mi_tablacc.csv  parse_error.rs  record.rs  table_example.rs  test_helper.rs  traits.rs  utils.rs
src/db/: dbindex copy 3.rs  dbindex.rs  export.rs  field.rs  index.rs  indexer.rs  record.rs  source.rs  table.rs
src/db/dbindex/: header.rs
src/db/field/: field_type.rs  header.rs  record.rs  value.rs
src/db/index/: binarytree.rs  binarytree.rs.orig  raw_match.rs
src/db/index/binarytree/: header.rs  record.rs  value.rs
src/db/index/binarytree/record/: metadata.rs
src/db/index/raw_match/: header.rs
src/db/indexer/: exporter.rs  header.rs  value.rs
src/db/record/: header.rs  value.rs
src/db/table/: header.rs  record.rs
src/db/table/record/: header.rs  value.rs
src/engine/: error.rs  index.rs  parse_error.rs
src/engine/index/: data.rs  index_header.rs  index_value.rs  indexer.rs
src/index/: header.rs  index_header.rs  index_value.rs  indexer.rs  value.rs
src/record/: header.rs
static/css/: base.css  compare.css  home.css
static/js/: check_indexing.js
templates/: finish.html.tera  home.html.tera
templates/error/: bad_record.html.tera
templates/errors/: bad_parse.html.tera  bad_record.html.tera
templates/qa/: apply.json.tera  compare.html.tera  no_record.html.tera  pause.html.tera
