[package]
name = "dhfarm_engine"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.8.4"
tempfile = "3"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
csv = "1.1"
sha3 = "0.10.0"
path-absolutize = "3.0.11"
regex = "1.5.4"
anyhow = "1.0"
thiserror = "1.0.30"
indexmap = "1.9.3"

[dependencies.uuid]
version = "1.3.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]